<resources>
    <string name="app_name">Coocking</string>
    <string name="welcome_massage">Авторизуйтесь</string>
    <string name="buttonInput">Войти</string>
    <string name="loginHint">Введите имя</string>
    <string name="exit">Выход</string>
    <string name="exitAlert">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="close">Закрытие приложения</string>
    <string name="costPrice">Себестоимость</string>
    <string name="addProduct">Добавить товар</string>
    <string name="productList">Список товаров</string>
</resources>